--- a/roles/awx/tasks/main.yml
+++ b/roles/awx/tasks/main.yml
@@ -104,6 +104,20 @@
     src: nginx.conf.j2
     dest: /etc/nginx/nginx.conf
 
+- name: Create /var/lib/awx/.ssh diretory
+  file:
+    path: /var/lib/awx/.ssh
+    state: directory
+    mode: 0755
+
+- name: Add awx config to solve known_hosts problem
+  template:
+      src: config
+      dest: /var/lib/awx/.ssh/config
+      owner: root
+      group: root
+      mode: 0644
+
 - name: restart nginx
   service: 
    name: nginx
