--- a/awx.yml
+++ b/awx.yml
@@ -5,4 +5,7 @@
   remote_user: '{{admin_username}}'
   
   roles:
+    - { role: common , tags: common }
+    - { role: postgresql , tags: postgresql }
     - { role: awx , tags: awx }
+    - { role: end , tags: end }
